--- a/start_organisation/templates/start-invite.html
+++ b/start_organisation/templates/start-invite.html
@@ -18,6 +18,7 @@
 
         </div>
         <button type="submit" class="button expand">Next</button>
+         {{ form.csrf_token }}
       </form>
     </div>
   </div>
