--- a/start_organisation/templates/start-review.html
+++ b/start_organisation/templates/start-review.html
@@ -6,7 +6,7 @@
      <h2>Review details</h2>
      <div class="panel">
         <i class="fa fa-bookmark fa-4x"></i>
-       <h5>{{order.name}}</h5> 
+       <h5>{{order.name}}</h5>
        <hr/>
        <dl>
          <dt>Organisation type</dt>
@@ -18,6 +18,7 @@
      <form action="" method="post">
         {{ render_checkbox(form.confirm) }}
         <button type="submit" class="button expand">Create organisation</button>
+        {{ form.csrf_token }}
       </form>
     </div>
   </div>
