--- a/start_organisation/templates/start-type.html
+++ b/start_organisation/templates/start-type.html
@@ -13,6 +13,7 @@
      <form action="" method="post">
          {{form.organisation_type}}
          <button type="submit" class="button expand">Next</button>
+         {{ form.csrf_token }}
       </form>
     </div>
   </div>
